# sqlize

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml
.github/workflows/: ci.yml  security.yml
crates/sqlize/: Cargo.toml
crates/sqlize-cli/: Cargo.toml
crates/sqlize-cli/src/: main.rs
crates/sqlize-core/: Cargo.toml
crates/sqlize-core/examples/: github_query.rs  github_schema.rs
crates/sqlize-core/src/: error.rs  lib.rs  output.rs
crates/sqlize-core/src/catalog/: ddl.rs  mod.rs  types.rs
crates/sqlize-core/src/datafusion/: arrow_convert.rs  exec.rs  mod.rs  provider.rs  schema.rs
crates/sqlize-core/src/exec/: mod.rs  pagination.rs  postprocess.rs  response.rs
crates/sqlize-core/src/spec/: column_map.rs  mod.rs  table_gen.rs
crates/sqlize-core/src/sql/: plan.rs  planner.rs
crates/sqlize-mcp/: Cargo.toml
crates/sqlize-mcp/src/: main.rs  tools.rs
crates/sqlize/src/: main.rs  mcp.rs  repl.rs
research/: competitive-analysis.md  llm-sql-generation-capabilities.md  next-steps.md  unified-research.md
specs/: github-minimal.json  gitlab-minimal.json  stripe-minimal.json
vhs-demo/: demo-mcp.tape  demo.tape
