[workspace]
members = ["crates/sqlize-core", "crates/sqlize"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Ben Aiad"]
repository = "https://github.com/Benaiad/sqlize"
homepage = "https://github.com/Benaiad/sqlize"
rust-version = "1.85"

[workspace.dependencies]
sqlize-core = { path = "crates/sqlize-core", version = "0.2.0" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "powershell"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
install-path = ["$XDG_BIN_HOME/", "$XDG_DATA_HOME/../bin", "~/.local/bin"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
