[package]
name = "sqlize-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlize-core = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { workspace = true }
rustyline = "15"
tabled = "0.18"
