[package]
name = "sqlize-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openapiv3 = "2"
sqlparser = { version = "0.61", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
toon-format = { version = "0.4", default-features = false }
