[package]
name = "sqlize-core"
description = "Core library for sqlize: SQL query engine over REST APIs via OpenAPI specs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["sql", "rest-api", "openapi", "query"]
categories = ["database-interfaces", "web-programming"]
publish = false

[dependencies]
openapiv3 = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
toon-format = { version = "0.4", default-features = false }
datafusion = "46"
async-trait = "0.1"
futures = "0.3"
