[package]
name = "sqlize-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlize-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "0.8"
