[package]
name = "sqlize"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlize-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rustyline = "17"
terminal_size = "0.4"
tabled = "0.18"
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "0.8"
