[package]
name = "sqlize"
description = "SQL interface for REST APIs — query any API using SELECT, WHERE, LIMIT"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["sql", "rest-api", "openapi", "cli", "mcp"]
categories = ["command-line-utilities", "database-interfaces"]

[dependencies]
sqlize-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reedline = "0.45"
crossterm = "0.29"
nu-ansi-term = "0.50"
dirs = "6"
terminal_size = "0.4"
tabled = "0.18"
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "0.8"
